--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
@@ -6,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <build>
-    <finalName>Execute</finalName>
+    <finalName>DB2toMongo</finalName>
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -41,20 +42,36 @@
 	    <artifactId>gson</artifactId>
 	    <version>2.8.5</version>
 	</dependency>
+        
+
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongo-java-driver</artifactId>
+                <version>3.10.0</version>
+            </dependency>
+
       <dependency>
          <groupId>org.mongodb</groupId>
          <artifactId>mongodb-driver</artifactId>
          <version>3.10.0</version>
       </dependency>
+      
+      <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>3.10.0</version>
+      </dependency>
+      
+      <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-async</artifactId>
+            <version>3.10.0</version>
+      </dependency>
+      
       <dependency>
          <groupId>org.mongodb</groupId>
          <artifactId>mongosql-auth</artifactId>
          <version>1.0.0-rc0</version>
-      </dependency>
-      <dependency>
-         <groupId>org.mongodb</groupId>
-         <artifactId>mongodb-driver-async</artifactId>
-         <version>3.2.0</version>
       </dependency>
       <dependency>
          <groupId>com.ibm.db2.jcc</groupId>
@@ -62,7 +79,5 @@
          <version>db2jcc4</version>
       </dependency>
    </dependencies>
-  
-
   
 </project>
